# Self-delete

./: ALL_BUILD.vcxproj  CMakeLists.txt  Project.sln  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp
